# libvmod-queryfilter

./: .gitignore  .kitchen.yml  .travis.yml  CHANGELOG.md  Dockerfile  Gemfile  LICENSE  Makefile.am  NOTICE  README.md  TODO.md  autogen.sh  configure.ac  tmp-build.sh  vmod-queryfilter.spec  vmod-queryfilter.spec.in
.build/: centos6.sh  debian8.sh
m4/: ax_as_var_copy.m4  ax_check_varnish.m4  ax_check_varnish_src.m4  ax_check_varnish_version.m4  ax_check_varnishsrc.m4  ax_check_vmod_dir.m4  ax_check_vmodtool.m4  ax_pkg_check_var.m4  ax_prog_varnishd.m4  ax_prog_varnishtest.m4  ax_prog_vmodtool.m4  ax_queryfilter_compat.m4  queryfilter_varnish.m4
src/: Makefile.am  vmod_queryfilter.c  vmod_queryfilter.vcc  vmod_queryfilter3.vcc  vmod_queryfilter4.vcc
src/tests/: filterparams_check_for_array.vtc  filterparams_check_for_empty_param.vtc  filterparams_check_for_hit.vtc  filterparams_check_for_hit_with_one_param.vtc  filterparams_check_for_missing_params.vtc  filterparams_check_for_partial_hit.vtc  filterparams_check_sep_no_array.vtc  filterparams_with_blank_params.vtc
util/: README.md  docker-tests.sh  run_vtests.sh
